packages/dappy-node/kubernetes/envs/digitalocean/gamma/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: gamma
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* /metrics {
        deny all;
        return 404;
      }
spec:
  tls:
    - hosts:
        - grafana.gamma.dappy.tech
      secretName: grafana.gamma.dappy.tech
  rules:
    - host: grafana.gamma.dappy.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
